--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="real1" placeholder="Masukkan bagian real pertama">
-        <input type="text" id="imaginary1" placeholder="Masukkan bagian imajiner pertama">
-        <select id="operator">
-            <option value="+">+</option>
-            <option value="-">-</option>
-            <option value="*">*</option>
-            <option value="/">/</option>
-        </select>
-        <input type="text" id="real2" placeholder="Masukkan bagian real kedua">
-        <input type="text" id="imaginary2" placeholder="Masukkan bagian imajiner kedua">
-        <button onclick="calculate()">Hitung</button>
-        <input type="text" id="result" placeholder="Hasil" readonly>
+        <input type="text" name="number1" id="num1">
+        <p></p>
+        <input type="text" name="number2" id="num2">
+        <p>=</p>
+        <input type="text" name="output" id="output">
+        <p></p>
+        <button onclick="tambah()">tambah</button>
+        <button onclick="kurang()">kurang</button>
+        <button onclick="kali()">kali</button>
+        <button onclick="bagi()">bagi</button>
     </div>
 
     <script src="script.js"></script>
