*add theme switch *add some style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Kalkulator Kompleks</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <div class="theme-switcher">
+        <button id="toggleTheme">Toggle Theme</button>
+    </div>
+    
+</header>
 <body>
     <div class="calculator">
         <input type="text" name="number1" id="num1">
@@ -19,6 +25,10 @@
         <button onclick="kali()">kali</button>
         <button onclick="bagi()">bagi</button>
     </div>
+    <!-- +read only pada output
+         +pergantian NaN menjadi lebih bagus
+         +theme change
+         +dll -->
 
     <script src="script.js"></script>
 </body>
