--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="theme-switcher">
         <button id="toggleTheme">Toggle Theme</button>
     </div>
+    <div class="anjay">
+        <p>its bad website but its works :D</p>
+    </div>
     
 </header>
 <body>
@@ -18,7 +21,7 @@
         <p></p>
         <input type="text" name="number2" id="num2">
         <p>=</p>
-        <input type="text" name="output" id="output">
+        <input type="text" name="output" id="output" readonly>
         <p></p>
         <button onclick="tambah()">tambah</button>
         <button onclick="kurang()">kurang</button>
