modified:   calcu.html 	modified:   index style.css 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
     </header>
     <article class="article1">
         <a href="/web-kalkulator/calcu.html"><picture> <img class="pictu" src="/img/icon.png" alt="calc"></picture></a>
-        <figure class="fig1">Teks deskripsi merupakan salah satu bentuk tulisan yang bertujuan untuk menggambarkan secara rinci tentang suatu objek, tempat, orang, atau situasi. Dengan kata lain, teks deskripsi mengajak pembaca masuk ke dalam dunia visual melalui deskripsi yang detail dan jelas. Artikel ini akan membahas pengertian, ciri, struktur, jenis, serta pentingnya teks deskripsi dalam literatur dan komunikasi.</figure>
+        <figure class="fig1">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</figure>
     </article>
     <article class="article2">
-        <button><a class="button" href="/web-kalkulator/calcu.html">Kalkulator</a></button>
+        <a id="pj1" class="button" href="#project1">Project 1</a>
+        <a id="pj2" class="button" href="#project2">Project 2</a>
+        <a id="pj3" class="button" href="#project3">Project 3</a>
+        <a id="pj4" class="button" href="#project4">Project 4</a>
+    </article>
+    <article id="project1" class="project1">
+        <h3 class="pj1t">project 1</h3>
+        <p  class="pj1t">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</p>
+    </article>
+    <article id="project2" class="project2">
+        <h3 class="pj1t">project 2</h3>
+        <p  class="pj1t">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</p>
+    </article>
+    <article id="project3" class="project3">
+        <h3 class="pj1t">project 3</h3>
+        <p  class="pj1t">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</p>
+    </article>
+    <article id="project4" class="project4">
+        <h3 class="pj1t">project 4</h3>
+        <p  class="pj1t">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</p>
     </article>
     <script src="/web-kalkulator/script.js"></script>
 </body>
