modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="h1" class="h1">Welcome to Project GJ</h1>
     </header>
     <article class="article1">
-        <a href="/web-kalkulator/calcu.html"><picture> <img class="pictu" src="https://cdn.icon-icons.com/icons2/3913/PNG/512/fluxus_logo_icon_248527.png" alt="calc"></picture></a>
+        <a href="/web-kalkulator/calcu.html"><picture> <img class="pictu" src="/web-kalkulator/img/spotify-logo-png-7078.png" alt="calc"></picture></a>
         <figure class="fig1">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</figure>
     </article>
     <article class="article2">
