--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <header style="padding: 20px; text-align: center;">
         <h1 id="h1" class="h1">Welcome to Project GJ</h1>
     </header>
+    <article class="anjay">
+        <a href="https://wa.me/+6283877224670"><img class="lg1" src="/web-kalkulator/img/whatsapp_logo_icon_181408.png" alt="wa"></a>
+        <a href="https://www.instagram.com/xvergils/"><img class="lg1" src="/web-kalkulator/img/logo-instagram-hitam-putih-removebg-preview.png" alt="ig"></a>
+        <a href="https://open.spotify.com/playlist/3bvcMfxBPgOp6Axjsxk5dn?si=652d53c63b0e49ab"><img class="lg1" src="/web-kalkulator/img/spotify-icon-black-17.png" alt="Spotify"></a>
+        <a href="dicord.com/invite/CTEphEtB"><img class="lg1" src="/web-kalkulator/img/logo_dc_ireng-removebg-preview.png" alt="dc"></a>
+        <a href="https://github.com/BachTiarIS"><img class="lg1" src="/web-kalkulator/img/github_logo-removebg-preview.png" alt="github"></a>
+    </article>
     <article class="article1">
-        <a href="/web-kalkulator/calcu.html"><picture> <img class="pictu" src="/web-kalkulator/img/spotify-logo-png-7078.png" alt="calc"></picture></a>
-        <figure class="fig1">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</figure>
+        <a href=""><picture> <img class="pictu" src="/web-kalkulator/img/icon utama (1).png" alt="calc"></picture></a>
+        <figure class="fig1">Seperti judul di atas ini adalah website GJ (GaJelas), website ini di buat untuk mengisi kesuntukan pada hari minggu oleh xVe(Tiar).website ini sebenarnya untuk kesenangan semata tetapi saya melihat potensi yang bagus pada website ini jadi saya berencana untuk mempublikasinya pada tanggal 5 mei 2024 untuk kepentingan pribadi tentunya. Untuk Project project di bawah sebenarnya belum jadi alias malas untuk di kerjakan dikarnakan fokus persiapan masuk ke High School besok. Saya juga mungkin akan mencari orang lain untuk mengerjakan website ini. Saya juga telah membuat icon aplikasi untuk kalian bisa melihat saya aktif di mana saja, silahkan cek di atas</figure>
     </article>
     <article class="article2">
         <a id="pj1" class="button" href="#project1">Project 1</a>
