--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://wa.me/+6283877224670"><img class="lg1" src="/xVe-bio/img/whatsapp_logo_icon_181408.png" alt="wa"></a>
         <a href="https://www.instagram.com/xvergils/"><img class="lg1" src="/xVe-bio/img/logo-instagram-hitam-putih-removebg-preview.png" alt="ig"></a>
         <a href="https://open.spotify.com/playlist/3bvcMfxBPgOp6Axjsxk5dn?si=652d53c63b0e49ab"><img class="lg1" src="/xVe-bio/img/spotify-icon-black-17.png" alt="Spotify"></a>
-        <a href="dicord.com/invite/CTEphEtB"><img class="lg1" src="/xVe-bio/img/logo_dc_ireng-removebg-preview.png" alt="dc"></a>
+        <a href="https://dicord.com/invite/CTEphEtB"><img class="lg1" src="/xVe-bio/img/logo_dc_ireng-removebg-preview.png" alt="dc"></a>
         <a href="https://github.com/BachTiarIS"><img class="lg1" src="/xVe-bio/img/github_logo-removebg-preview.png" alt="github"></a>
     </article>
     <article class="article1">
