--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
         <h3 class="pj1t">project 4</h3>
         <p  class="pj1t">Tara Pixley memiliki portfolio online yang juga mengedepankan desain. Tidak heran, ia merupakan jurnalis foto dan profesor jurnalisme visual. Portfolionya tentu mengingatkan pada sebuah layout koran atau majalah.Utamanya, portfolio fotonya terbagi menjadi tiga kategori, yaitu reportase, potret, dan dance. Tidak hanya itu, ia juga mencantumkan contoh karya lain berupa film dokumenter dan tulisan.Agar memudahkan untuk menavigasi situs, Tara Pixley menggunakan pengguliran horizontal yang menyenangkan dan non-tradisional.</p>
     </article>
-    <script src="/xVe-bio/script.js"></script>
+    <script src="/xVe-bio/scriptbio.js"></script>
 </body>
 </html>
