--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-    
+    <nav>
+        <div id="navbar1" class="navbar">
+            <a href="#menu1" id="menu1" style="color: aliceblue; text-decoration: none; width: 50px;" class="ph ph-list"></a>
+        </div>
+          
+        <a href="#menu1" id="menu" style="color: aliceblue; text-decoration: none;" class="ph ph-list"></a>
+    </nav>
     <header style="padding: 20px; text-align: center;">
         <h1 id="h1" class="h1">Welcome to Project GJ</h1>
     </header>
