new file:   Dashboard/Dashboard.css 	new file:   Dashboard/dashboard.html 	new file:   Dashboard/dashboard.js 	modified:   calcu.html 	modified:   index style.css 	modified:   index.html 	modified:   scriptbio.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio</title>
     <link rel="stylesheet" href="/xVe-bio/index style.css">
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
@@ -11,7 +12,6 @@
         <div id="navbar1" class="navbar">
             <a href="#menu1" id="menu1" style="color: aliceblue; text-decoration: none; width: 50px;" class="ph ph-list"></a>
         </div>
-          
         <a href="#menu1" id="menu" style="color: aliceblue; text-decoration: none;" class="ph ph-list"></a>
     </nav>
     <header style="padding: 20px; text-align: center;">
